welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:40: error: ')' expected but '}' found.
	}
        ^